CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- The scheduler did not check for a valid Listen/Port
	  configuration (STR #499)
	- The cupsPrintFiles() function did not always set the
	  last IPP error message (STR #538)
	- The pstops filter did not write the PostScript header
	  line if the file began with a PJL escape sequence (STR
	  #574)
	- The printer-is-accepting-jobs status of remote
	  printers was not sent to clients via browsing or
	  polling (STR #571)
	- Browse packets did not indicate whether a printer
	  was accepting or rejecting jobs.
	- The web interface did not show the printer state
	  history information (STR #592)
	- The rastertoepson filter would crash under certain
	  cirsumstances (STR #583)
	- The USB backend did not handle serial numbers using
	  the (incorrect) SN keyword and did not terminate the
	  make and model name strings properly (STR #471, STR
	  #588)
	- The USB backend did not build on Solaris x86 (STR
	  #585)
	- The cupsDoAuthentication() function did not use the
	  method name for Digest authentication (STR #584)
	- The scheduler could crash if a print job could not be
	  printed and the PreserveJobHistory option was turned
	  off (STR #535)
	- cups-lpd now logs the temporary filenames that could
	  not be opened in order to make troubleshooting easier
	  (STR #565)
	- cupsGetJobs() now returns -1 on error (STR #569)
	- Added localization for Belarusian (STR #575)
	- The LPD backend used the full length of the hostname
	  when creating the data and control filenames, which
	  causes problems with older systems that can't handle
	  long filenames (STR #560)
	- The scheduler did not refresh the common printer data
	  after a fast reload; this prevented banner and other
	  information from being updated (STR #562)
	- The scheduler did not send common or history data to
	  the client when processing a CUPS-Get-Default request
	  (STR #559)
	- The httpFlush() function did not always flush the